--- a/info.yaml
+++ b/info.yaml
@@ -1,10 +1,10 @@
 # Tiny Tapeout project information (Wokwi project)
 project:
-  wokwi_id:     0       # Set this to the ID of your Wokwi project (the number from the project's URL)
-  title:        ""      # Project title
-  author:       ""      # Your name
-  discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  wokwi_id:     426603711070400513       # Set this to the ID of your Wokwi project (the number from the project's URL)
+  title:        "Introduction to ECSE and Gates"      # Project title
+  author:       "Blessing Esochaghi"      # Your name
+  discord:      "still._.here"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  description:  "A single AND Gate to ease into circuit design."      # One line description of what your project does
   language:     "Wokwi" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
@@ -15,8 +15,8 @@ project:
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
+  ui[0]: "I1"
+  ui[1]: "I2"
   ui[2]: ""
   ui[3]: ""
   ui[4]: ""
@@ -25,7 +25,7 @@ pinout:
   ui[7]: ""
 
   # Outputs
-  uo[0]: ""
+  uo[0]: "I1 AND I2"
   uo[1]: ""
   uo[2]: ""
   uo[3]: ""
